--- a/partials/login.html
+++ b/partials/login.html
@@ -5,17 +5,20 @@
 				<div class="row justify-content-center">
 					<div class="col-lg-5">
 						<div class="card shadow-lg border-0 rounded-lg mt-5">
-							<div class="card-header"><h3 class="text-center font-weight-light my-4">To do list Login</h3></div>
+							<div class="card-header"><h3 class="text-center font-weight-light my-4">To-do List Login</h3></div>
 							<div class="card-body">
-								<form>
-									<div class="form-group">
-										<label class="small mb-1" for="inputEmailAddress">Email</label><input class="form-control py-4" id="inputEmailAddress" type="email" placeholder="Enter email address" />
-									</div>
-									<div class="form-group">
-										<label class="small mb-1" for="inputPassword">Password</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" />
-									</div>
+								<form id="LoginForm" name="LoginForm" ng-submit="submitLoginForm(loginform_user)" novalidate>
+									<div class="form-group" ng-class="{'has-error': LoginForm.email.$invalid && LoginForm.email.$dirty}">
+						    		    <input type="email" class="form-control" placeholder="E-mail" name="email" ng-model="loginuser.email" ng-required="true" autocomplete="off">
+							    		<p class="help-block" ng-show="LoginForm.email.$error.required && LoginForm.email.$dirty">The email is required</p>
+										<p class="help-block" ng-show="LoginForm.email.$error.email && LoginForm.email.$dirty">Please enter a valid email</p>
+						    		</div>
+									<div class="form-group" ng-class="{'has-error': LoginForm.userpwd.$invalid && LoginForm.userpwd.$dirty}">
+						    			<input type="password" class="form-control" placeholder="Password" name="userpwd" ng-model="loginuser.userpwd" ng-required="true">
+						    			<p class="help-block" ng-show="LoginForm.userpwd.$error.required && LoginForm.userpwd.$dirty">The password is required</p>
+						    		</div>
 									<div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
-										<a class="btn btn-primary" href="index.html">Login</a>
+										<button type="submit" class="btn btn-lg btn-primary" ng-disabled="loginbtn">Login <span id="login_loader"></span></button>
 									</div>
 								</form>
 							</div>
