--- a/partials/profile.html
+++ b/partials/profile.html
@@ -1,28 +1,18 @@
-<div id="layoutAuthentication">
-	<div id="layoutAuthentication_content">
-		<main>
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-lg-5">
-						<div class="card shadow-lg border-0 rounded-lg mt-5">
-							<div class="card-header"><h3 class="text-center font-weight-light my-4">To do list Login</h3></div>
-							<div class="card-body">
-								<form>
-									<div class="form-group">
-										<label class="small mb-1" for="inputEmailAddress">Email</label><input class="form-control py-4" id="inputEmailAddress" type="email" placeholder="Enter email address" />
-									</div>
-									<div class="form-group">
-										<label class="small mb-1" for="inputPassword">Password</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" />
-									</div>
-									<div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
-										<a class="btn btn-primary" href="index.html">Login</a>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</main>
-	</div>
-</div>
+<div id="layoutSidenav_nav" ng-include="'partials/includes/sidenav_top.html'"></div>
+<div id="layoutSidenav">
+    <div id="layoutSidenav_nav" ng-include="'partials/includes/sidenav.html'"></div>
+    <div id="layoutSidenav_content">
+        <main>
+            <div class="container-fluid">
+                <h1 class="mt-4">To-do List</h1>
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                    <li class="breadcrumb-item active">Profile</li>
+                </ol>
+                <div class="card mb-4">
+                    <div class="card-body">This page is an example of using the light side navigation option. By appending the <code>.sb-sidenav-light</code> class to the <code>.sb-sidenav</code> class, the side navigation will take on a light color scheme. The <code>.sb-sidenav-dark</code> is also available for a darker option.</div>
+                </div>
+            </div>
+        </main>
+    </div>
+</div>  
