--- a/partials/profile.html
+++ b/partials/profile.html
@@ -6,7 +6,7 @@
             <div class="container-fluid">
                 <h1 class="mt-4">To-do List</h1>
                 <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                    <li class="breadcrumb-item"><a href="#!/to-do-list/">To-do List</a></li>
                     <li class="breadcrumb-item active">Profile</li>
                 </ol>
                 <div class="card mb-4">
