--- a/partials/login.html
+++ b/partials/login.html
@@ -8,14 +8,14 @@
 							<div class="card-header"><h3 class="text-center font-weight-light my-4">To-do List Login</h3></div>
 							<div class="card-body">
 								<form id="LoginForm" name="LoginForm" ng-submit="submitLoginForm(loginform_user)" novalidate>
-									<div class="form-group" ng-class="{'has-error': LoginForm.email.$invalid && LoginForm.email.$dirty}">
+									<div class="form-group" ng-class="{'has-error': LoginForm.email.$invalid && (LoginForm.email.$dirty || login_submitted)}">
 						    		    <input type="email" class="form-control" placeholder="E-mail" name="email" ng-model="loginuser.email" ng-required="true" autocomplete="off">
-							    		<p class="help-block" ng-show="LoginForm.email.$error.required && LoginForm.email.$dirty">The email is required</p>
-										<p class="help-block" ng-show="LoginForm.email.$error.email && LoginForm.email.$dirty">Please enter a valid email</p>
+							    		<p class="help-block" ng-show="LoginForm.email.$error.required && (LoginForm.email.$dirty || login_submitted)">The email is required</p>
+										<p class="help-block" ng-show="LoginForm.email.$error.email && (LoginForm.email.$dirty || login_submitted)">Please enter a valid email</p>
 						    		</div>
 									<div class="form-group" ng-class="{'has-error': LoginForm.userpwd.$invalid && LoginForm.userpwd.$dirty}">
 						    			<input type="password" class="form-control" placeholder="Password" name="userpwd" ng-model="loginuser.userpwd" ng-required="true">
-						    			<p class="help-block" ng-show="LoginForm.userpwd.$error.required && LoginForm.userpwd.$dirty">The password is required</p>
+						    			<p class="help-block" ng-show="LoginForm.userpwd.$error.required && (LoginForm.userpwd.$dirty || login_submitted)">The password is required</p>
 						    		</div>
 									<div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
 										<button type="submit" class="btn btn-lg btn-primary" ng-disabled="loginbtn">Login <span id="login_loader"></span></button>
